[package]
name = "async-graphql-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

[dependencies]
actix-web = "4.4.0"
async-graphql = "6.0.6"
async-graphql-actix-web = "6.0.6"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
fakeit = "1.2.0"
reqwest-graphql = "1.0.0"
